<resources>
    <string name="app_name">ListBoxer</string>
    <string name="add_to_list">Add to list</string>
    <string name="clear_list">Clear list</string>
    <string name="records_in_list">Records in list</string>
    <string name="shown_records_in_list">Shown records in list</string>
    <string name="all_0">0</string>
    <string name="shown_0">0</string>
    <string name="alphabetic">Alphabetic</string>
    <string name="numeric">Numeric</string>
    <string name="descending">Descending</string>
    <string name="ascending">Ascending</string>
    <string name="range">Range</string>
    <string name="sort">Sort</string>
    <string name="input_mode">Input mode</string>

</resources>
