<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.example.user.listboxer.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="8dp">

        <EditText
             android:id="@+id/value"
             android:layout_width="200dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:inputType="text" />

        <Button
            android:id="@+id/add"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_marginRight="8dp"
            android:text="@string/add_to_list"
            android:layout_marginLeft="8dp"
            android:onClick="clickAddButton"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/range"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" />

        <Spinner
            android:id="@+id/range"
            android:layout_height="48dp"
            android:layout_width="116dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="116dp"
            android:layout_height="96dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

                    <RadioButton
                        android:id="@+id/desc"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/descending" />

                    <RadioButton
                        android:id="@+id/asc"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/ascending" />
        </RadioGroup>

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_mode"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp" />

        <RadioGroup
            android:id="@+id/checkboxGroup"
            android:layout_width="116dp"
            android:layout_height="96dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">

                    <CheckBox
                        android:id="@+id/alpha"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:checked="true"
                        android:text="@string/alphabetic" />

                    <CheckBox
                        android:id="@+id/num"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:text="@string/numeric" />
        </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/list"
            android:layout_width="170dp"
            android:layout_height="376dp"
            android:inputType="textMultiLine"
            android:background="@color/colorPrimary"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            android:paddingTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="56dp"
            android:layout_width="150dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/real"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/records_in_list"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/displayed"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/shown_records_in_list"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="56dp"
            android:layout_width="50dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp">

            <TextView
                android:id="@+id/totalCount"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/all_0"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/shownCount"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/shown_0"
                android:layout_marginTop="8dp"/>

        </LinearLayout>


        <Button
            android:id="@+id/clear"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/clear_list"
            android:onClick="clickClearButton"/>

    </LinearLayout>

</LinearLayout>
